syntax = "proto3";

package user;

option go_package = "github.com/S0rgi/Gainly_Avatars/pkg/proto";

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc ValidateToken (TokenRequest) returns (UserResponse);
  rpc CheckFriendship(FriendshipRequest) returns (FriendshipResponse);
}

message FriendshipRequest{
  string userId = 1;
  string friendName = 2;
}

message FriendshipResponse{
    string FriendId =1;
    string Email = 2;
}

message UserRequest {
  string id = 1;
}

message TokenRequest {
  string accessToken = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}

